--- a/index.html
+++ b/index.html
@@ -49,17 +49,6 @@
       font-size: 1.3rem;
     }
 
-    .link, a {
-      color: #8b5cf6;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    .link:hover, a:hover {
-      color: #d8b4fe;
-    }
-
     .bike-specs p {
       font-size: 1.4rem;
       font-weight: 700;
@@ -78,22 +67,23 @@
 
     .button {
       display: inline-block;
-      margin-top: 10px;
-      padding: 12px 24px;
+      margin: 6px 4px;
+      padding: 10px 20px;
       background: linear-gradient(135deg, #7c3aed, #6b21a8);
       color: white;
       border: none;
       border-radius: 30px;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1rem;
       cursor: pointer;
       text-decoration: none;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
     }
 
     .button:hover {
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(155, 89, 182, 0.6);
+      background: linear-gradient(135deg, #8b5cf6, #7c3aed);
     }
 
     @keyframes fadeIn {
@@ -127,34 +117,82 @@
 <section>
   <h2>Upgrades:</h2>
   <ul>
-    <li>Bluetooth Dongle – Keenso (GBP 25.85) – <a href="#" class="link">Amazon</a></li>
-    <li>Grips – Worldmotop (GBP 6.00) – <a href="#" class="link">Amazon</a></li>
-    <li>Front Fender – JFG RACING Carbon (GBP 27.03) – <a href="#" class="link">Amazon</a></li>
-    <li>Rear Fender – JFG RACING Carbon (GBP 18.77) – <a href="#" class="link">Amazon</a></li>
-    <li>Number Plate – LINGQI Carbon Plate (GBP 19.52) – <a href="#" class="link">Amazon</a></li>
-    <li>UnderGlow – 4PCS Wireless LED Lights (GBP 12.01) – <a href="#" class="link">Amazon</a></li>
-    <li>Front Plate – Sur Ron Front Plate (GBP 7.89) – <a href="#" class="link">Amazon</a></li>
-    <li>Seat – FG RACING Seat Cover (GBP 18.99) – <a href="#" class="link">Amazon</a></li>
+    <li>Bluetooth Dongle – Keenso (GBP 25.85) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Grips – Worldmotop (GBP 6.00) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Front Fender – JFG Racing (GBP 27.03) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Rear Fender – JFG Racing (GBP 18.77) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Number Plate – LINGQI (GBP 19.52) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>UnderGlow – LED Lights (GBP 12.01) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Front Plate – Sur Ron Front Plate (GBP 7.89) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Seat – FG Racing Seat (GBP 18.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
   </ul>
 </section>
 
 <section>
   <h2>Extras:</h2>
   <ul>
-    <li>Helmet – Mongoose Full Face (GBP 74.47) – <a href="#" class="link">Amazon</a></li>
-    <li>Gloves – Fox Racing Ranger Gel (GBP 18.73) – <a href="#" class="link">Amazon</a></li>
-    <li>Chest Bag – Running Chest Bag (GBP 26.99) – <a href="#" class="link">Amazon</a></li>
+    <li>Helmet – Mongoose (GBP 74.47) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Gloves – Fox Racing Ranger Gel (GBP 18.73) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Chest Bag – Running Chest Bag (GBP 26.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
   </ul>
 </section>
 
 <section>
   <h2>Legal (UK):</h2>
   <ul>
-    <li>Headlight – JFG RACING (GBP 33.99) – <a href="#" class="link">Amazon</a></li>
-    <li>Mirrors – 1 Pair Aluminum (GBP 19.99) – <a href="#" class="link">Amazon</a></li>
-    <li>Horn/Control Panel – FSFY Switch (GBP 22.96) – <a href="#" class="link">Amazon</a></li>
-    <li>Rear Brake Light – Tail Brake (GBP 21.99) – <a href="#" class="link">Amazon</a></li>
-    <li>Indicators – Kinstecks Flowing Turn Signals (GBP 17.99) – <a href="#" class="link">Amazon</a></li>
+    <li>Headlight – JFG Racing (GBP 33.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Mirrors – Aluminum Pair (GBP 19.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Horn/Control Panel – FSFY Switch (GBP 22.96) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Rear Brake Light – Tail Brake (GBP 21.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
+    <li>Indicators – Kinstecks Turn Signals (GBP 17.99) 
+      <a href="#" class="button" target="_blank">Amazon</a> 
+      <a href="#" class="button" target="_blank">Aliexpress</a>
+    </li>
   </ul>
 </section>
 
@@ -172,26 +210,17 @@
 
 <section>
   <h2>Info:</h2>
-  <p>Every item is available on <a href="https://amazon.co.uk" class="link" target="_blank">Amazon</a> or <a href="https://aliexpress.com" class="link" target="_blank">Aliexpress</a>.</p>
-  <p>The actual bike is available on <a href="https://tuttiosport.com/products/tuttio-soleil01-electric-bike" class="link" target="_blank">Tuttio Sport</a>.</p>
-  <p>This is a good budget build! If you upgrade with a 72V system, supermoto tyres, and a new motor, it gets even crazier.</p>
+  <p>All upgrades are available on <a href="https://amazon.co.uk" class="link" target="_blank">Amazon</a> and <a href="https://aliexpress.com" class="link" target="_blank">Aliexpress</a>.</p>
+  <p>Bike is from <a href="https://tuttiosport.com/products/tuttio-soleil01-electric-bike" class="link" target="_blank">Tuttio Sport</a>.</p>
 </section>
 
 <section>
   <h2>Videos:</h2>
   <ul>
     <li><a href="https://www.youtube.com/watch?v=46ULECKE5zw" class="link" target="_blank">Phethanfix Video</a></li>
-    <li><a href="https://www.youtube.com/watch?v=0i6LCu_hQro" class="link" target="_blank">Surronster Video</a></li>
+    <li><a href="https://www.youtube.com/watch?v=0i6LCu_hQro" class="link" target="_blank">How to De-restrict</a></li>
+    <li><a href="https://www.youtube.com/watch?v=y5l42M3h7VA" class="link" target="_blank">Bluetooth Dongle Guide</a></li>
   </ul>
-</section>
-
-<section>
-  <h2>Legal Info:</h2>
-  <p>Learn about road legality here:</p>
-  <ul>
-    <li><a href="https://www.youtube.com/watch?v=XgFj8VoRjvA" class="link" target="_blank">E-bike Legal Video 2025</a></li>
-  </ul>
-  <p>To ride legally: add lights, indicators, mirrors, speedometer, horn, VIN registration, MOT if over 3 years, and insurance.</p>
 </section>
 
 </body>
